<resources>
    <string name="app_name">Box.io</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="name">Name</string>
    <string name="reg_new_usr">Register new user</string>
    <string name="now_you_can_order_the_box_nlet_s_look_what_we_have">Now You can order the box! Let\'s look what we have!</string>
    <string name="chose_size">Chose size:</string>
    <string name="chose_color">Chose color:</string>
    <string name="add_my_name_on_the_box">add my name on the box</string>
    <string name="order_box">order box</string>
</resources>
