<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="software.doit.boxio.view.main.MainActivityViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/now_you_can_order_the_box_nlet_s_look_what_we_have"
            android:textSize="16sp" />

        <View style="@style/DividerView" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/chose_size"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/sizeSpinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:textSize="16sp" />

        <View style="@style/DividerView" />

        <TextView
            android:id="@+id/choseColorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/chose_color"
            android:textSize="16sp"
            android:visibility="gone" />


        <Spinner
            android:id="@+id/colorSpinner"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_margin="16dp"
            android:textSize="16sp"
            android:visibility="gone" />

        <View style="@style/DividerView" />


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/addNameCb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:onCheckedChanged="@{viewModel::onAddNameChanged}"
            android:text="@string/add_my_name_on_the_box"
            android:textSize="16sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <Button
            android:id="@+id/orderBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:onClick="@{viewModel::orderBox}"
            android:text="@string/order_box"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</layout>